bdr.BDR.scala.error
Erreur de compilation :
BDR:17: error: ')' expected but '=' found.
  if(message:String=A){
                   ^BDR:41: error: illegal start of simple expression
} 
^